<resources>
    <string name="app_name">medPal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="blood_sugar_level">Blood Sugar Level</string>
    <string name="allow_pop_up_notification">Allow pop-up notification</string>
    <string name="blood_pressure">Blood Pressure</string>


    <string name="appoinment">Appoinment</string>
    <string name="title_activity_blood_pressure">BloodPressureActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="november">November</string>
    <string name="novemberSugar">November</string>
    <string name="fab_content_desc">+</string>
    <string name="repeat_off">Off</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="reminder_title">AlarmReminder</string>

    <string-array name="november">
        <item>Record for november</item>
    </string-array>

    <string-array name="novemberSugar">
        <item>1/11       50</item>
        <item>2/11       50</item>
        <item>3/11       50</item>
        <item>4/11       50</item>
    </string-array>

    <!-- Variables for login/sign-up system -->

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="unfilled_Parameter">All fields are required</string>
    <string name="send">Send</string>


    <string name="signup">Sign Up</string>
    <string name="SignUp_alreadyHaveAcc">Already have account? <u>Login</u></string>
    <string name="signUp_passwordMismatch">Password Mismatch</string>

    <string name="login_alreadyHaveAcc">"Create a new account? <u>Sign up</u> "</string>
    <string name="login_confirmPassword">Confirm Password</string>
    <string name="login_forgotPasswordMsg">Forgot password? <u>Reset password</u></string>


    <string name="verifyEmail_header">Verify your email</string>
    <string name="verifyEmail_msg">Verification email has been sent to \n \n <b>%1$s</b>\n \n Please check your Inbox and Spam folder and click on activation link to activate account.</string>
    <string name="verifyEmail_buttonBackToLogin">Back to Login</string>

    <string name="noVerificationEmailMsg">Didn\'t receive verification email? <u>Resend</u></string>
    <string name="resend_header">Resend Verification Email</string>
    <string name="resend_emailNotGiven">Please enter email registered for account</string>

    <string name="forgotPassword_msg">Enter email used for account registration. Link for resetting password will be sent to this email.</string>
    <string name="forgotPassword_header">Reset Password</string>
    <string name="forgotPassword_BackToLogin">Back to <u>Login</u></string>
    <string name="Resend_VerificationEmailResent">Verification email sent, Please check your Inbox/Spam folder.</string>
    <string name="forgotPassword_resetEmailSentMsg">Link to Reset Password is sent. Please check Inbox/Spam folder.</string>
    <string name="resend_msg">Enter email used for account registration.</string>

</resources>