<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.medPal.App.login_signup.VerifyEmail">

    <TextView
        android:id="@+id/verifyEmail_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/verifyEmail_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/midBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verifyEmail_msg"
        android:layout_width="313dp"
        android:layout_height="163dp"
        android:text="@string/verifyEmail_msg"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmail_header"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/verifyEmail_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noVerificationEmailMsg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmail_msg" />

    <Button
        android:id="@+id/verifyEmail_backtoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="224dp"
        android:text="@string/verifyEmail_buttonBackToLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmail_msg"
        app:layout_constraintVertical_bias="0.0"
        android:theme="@style/Theme.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>