<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSystem.ResendVerificationEmail">

    <TextView
        android:id="@+id/resend_header"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:text="@string/resend_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/midBlue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="404dp"
        android:layout_height="0dp"
        android:layout_marginBottom="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resend_header">


        <TextView
            android:id="@+id/resend_msg"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:text="@string/resend_msg"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/resend_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/resend_email"
            android:layout_width="312dp"
            android:layout_height="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="email"
            android:drawableEnd="@drawable/ic_user"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.574"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/resend_button"
        android:theme="@style/Theme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ProgressBar
        android:id="@+id/resend_progress"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>